2025-03-07  Karl Berry  <karl@tug.org>

	* TL'25 release.

2025-02-22  Karl Berry  <karl@freefriends.org>

	* dvipdfmx-upjf3.test,
	* xdvipdfm-bad.test: remove /tmp/dvipdfmx.* files created by these
	tests. Report from Marc Baudoin,
	https://tug.org/pipermail/tlbuild/2025q1/005642.html
	
	This should be fixed within the dvipdfmx program and these
	removals changed to tests that the temp files don't exist; see
	https://tug.org/pipermail/dvipdfmx/2025-February/000351.html
	
	En passant, set svn keywords for all *.test file,
	for consistency.

2025-02-10  Karl Berry  <karl@tug.org>

	* data/dvipdfmx.cfg (V): now generate PDF 1.7 by default.
	* tests/dvipdfmx.cfg: likewise.

2025-02-05  Clerk Ma  <maqiyuan130324@vip.qq.com>

	* epdf.c: Fix page's opacity.

2025-02-02  Yukimasa Morimi  <h20y6m@yahoo.co.jp>

	* truetype.c: Fixed issues in embedded TrueType fonts (not CIDFont)
	where incorrect character widths occurred when using 127 or more
	glyphs, and where the 256th glyph was not displayed when using
	full 256 glyphs.
	* dvipdfmx-ttf0.test, cprm00.{dvi,tex}:
	Add tests for TrueType fonts
	from TANAKA Takuji <ttk@t-lab.opal.ne.jp>.
	https://github.com/texjporg/tex-jp-build/issues/172
	* configure.ac: version 20250202.

2024-11-18  Karl Berry  <karl@freefriends.org>

	* Makefile.am (bin_links): no longer make symlinks for ebb and
	extractbb, as extractbb is now a separate package, reimplemented
	in Lua: https://ctan.org/pkg/extractbb. This is because the
	previous symlink to dvipdfmx could be exploited using -D.
	(man1_links): likewise.
	(install-bin-links, uninstall-bin-links) [WIN32]: likewise.

2024-10-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvipdfmx-lmr{0,1}.test, tests/UPJF-UTF16-{H,V},
	tests/lm.map, tests/psfonts.map,
	tests/lmr0.tex, tests/lmr0-{al,up}.dvi,
	upjf_{full,omit}.{cnf,vf}, upjf1_{full,omit}.{vf,zvp0},
	upjf2_full.{vf,zvp0}, upjv_{full,omit}.vf, Makefile.am:
	Add tests for upTeX and OFM.
	https://github.com/texjporg/tex-jp-build/issues/170
